# tldr

./: .gitignore  README.md  pyproject.toml
tldr/: __init__.py  __main__.py  agent.py  chat.py  cli.py  git.py  utils.py
tldr/evaluations/: evaluate_code_extractor.py  evaluate_file_selector.py  evaluate_patterns.py
tldr/evaluations/datasets/: code_extractor_eval_dataset.json  file_selector_eval_dataset.json  pattern_eval_dataset.json
